button issue on hover: border visible, but background-color not

--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -25,6 +25,11 @@
     font-size: 35px;
   }
   // phone icon with title of contact
+  .phone {
+    color: blue;
+    background-color: lawngreen;
+    animation: shake 3s infinite ease-in;
+  }
 
   // social-media-form-wrapper
   .social-media-form-wrapper {
@@ -56,7 +61,7 @@
     }
     // textarea for message
     textarea {
-      align-self: flex-end;
+      // align-self: flex-end;
       width: 20vw;
       height: 20vw;
       color: rgb(53, 154, 236);
@@ -67,6 +72,7 @@
     .submit-btn {
       background: $background-gradient;
       border: none;
+      border-radius: 0.4rem;
       box-shadow: $boxshadow;
       // color: black;
       font-family: inherit;
@@ -76,10 +82,10 @@
       height: auto;
       padding: 0.5rem 1rem;
       cursor: pointer;
-      // &:hover {
-      //   background: $background-gradient;
-      //   background-color: purple;
-      // }
+      &:active {
+        background-color: red;
+        border: lawngreen 2px solid;
+      }
     }
   }
 }
